--- a/tp-frontend/src/app/shared/components/navbar/navbar.component.scss
+++ b/tp-frontend/src/app/shared/components/navbar/navbar.component.scss
@@ -1,3 +1,23 @@
 .nav-shadow {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3) !important;
 }
+.icon-navbar{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 7;
+  color: #fff;
+}
+
+.logo {
+  color: white;
+  font-size: 1.5rem;
+  line-height: 2%;
+  padding: 0% 2%;
+  float: left;
+  font-weight: bold;
+}
